# tpu-playground

./: README.md  notes.md  pyproject.toml
scripts/: create_vm.sh  tpu_vm_startup_script.sh
