[project]
name = "tpu-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Doidge",email = "kyle.blue.doidge@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
